--- a/index.html
+++ b/index.html
@@ -1,67 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/to-junior-dev.css">
-    <title>DEV Community</title>
-  </head>
-  <body>
-    <section>
-      <img src="/assets/red_horizon.jpg" class="fullWidth" alt="red mountains at the horizon"/>
-      <div class="juniorDevSectionPadding">
-        <aside>
-          <div class="profileInfo">
-            <img src="/assets/rounded-profile.png" class="profileImage" alt="profile picture of a guy smiling" >
-            <div class="column">
-              <h3 style="font-size: 16px">Mateusz Charytoniuk</h3>
-              <h4 class="profile-subtitle">Posted on Nov 15</h4>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/to-junior-dev.css">
+  <title>DEV Community</title>
+</head>
+
+<body>
+  <section>
+    <img src="/assets/red_horizon.jpg" class="fullWidth" alt="red mountains at the horizon" />
+    <div class="juniorDevSectionPadding">
+      <aside>
+        <div class="profileInfo">
+          <img src="/assets/rounded-profile.png" class="profileImage" alt="profile picture of a guy smiling">
+          <div class="column">
+            <h3 style="font-size: 16px">Mateusz Charytoniuk</h3>
+            <h4 class="profile-subtitle">Posted on Nov 15</h4>
           </div>
-  
-          <div class="emoji-section">
-            <div class="emoji">
-              <p>💖</p>
-              <p>120</p>
-            </div>
-  
-            <div class="emoji">
-              <p>🦄</p>
-              <p>6</p>
-            </div>
-  
-            <div class="emoji">
-              <p>🤩</p>
-              <p>9</p>
-            </div>
-  
-            <div class="emoji">
-              <p>🙌</p>
-              <p>18</p>
-            </div>
-  
-            <div class="emoji">
-              <p>🔥</p>
-              <p>21</p>
-            </div>
+        </div>
+
+        <div class="emoji-section">
+          <div class="emoji">
+            <p>💖</p>
+            <p>120</p>
           </div>
+
+          <div class="emoji">
+            <p>🦄</p>
+            <p>6</p>
+          </div>
+
+          <div class="emoji">
+            <p>🤩</p>
+            <p>9</p>
+          </div>
+
+          <div class="emoji">
+            <p>🙌</p>
+            <p>18</p>
+          </div>
+
+          <div class="emoji">
+            <p>🔥</p>
+            <p>20</p>
+          </div>
+        </div>
+      </aside>
+      <article>
+        <h1 class="mainTitle">To Junior Developers</h1>
+        <aside class="tagSection">
+          <p class="tags">#programming</p>
+          <p class="tags">#beginners</p>
+          <p class="tags">#career</p>
+          <p class="tags">#productivity</p>
         </aside>
-        <article>
-          <h1 class="mainTitle">To Junior Developers</h1>
-          <aside class="tagSection">
-            <p class="tags">#programming</p>
-            <p class="tags">#beginners</p>
-            <p class="tags">#career</p>
-            <p class="tags">#productivity</p>
-          </aside>
-            <p>I have 15 years of experience, coded in various languages, and solved multiple problems. I started my career when being a software developer was a hot commodity.</p>
-            <p>Looking at what is happening around us, I have to say a few things, and I will stay realistic. Things may sound harsh, but it's better than divulging in some copium.</p>
-            <h1 class="mainTitle">Be Independent</h1>
-            <p>If you land a coding job, be independent. Ask only a few questions about how to do things in the tech stack. People may tell you at first that there are no wrong questions, but in practice, there are. You should figure out most things by yourself. </p>
-        </article>
-      </div>
-    </section>
-  </body>
+        <p>I have 15 years of experience, coded in various languages, and solved multiple problems. I started my career
+          when being a software developer was a hot commodity.</p>
+        <p>Looking at what is happening around us, I have to say a few things, and I will stay realistic. Things may
+          sound harsh, but it's better than divulging in some copium.</p>
+        <h1 class="mainTitle">Be Independent</h1>
+        <p>If you land a coding job, be independent. Ask only a few questions about how to do things in the tech stack.
+          People may tell you at first that there are no wrong questions, but in practice, there are. You should figure
+          out most things by yourself. </p>
+      </article>
+    </div>
+  </section>
+</body>
+
 </html>
