agregando mi seccion el header y la barra lateral izquierda

--- a/index.html
+++ b/index.html
@@ -8,6 +8,119 @@
     <title>DEV Community</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="hamburgerContainer">
+        <div class="hamburger">
+          <i class="fa-solid fa-bars" style="font-size: 25px"></i>
+        </div>
+        <img src="./assets/dev.png" class="logo" alt="logo" />
+        <div class="inputContainer">
+          <input type="text" placeholder="Search..." class="inputNav" /><i
+            class="fa-solid fa-magnifying-glass inputGlass"
+            style="font-size: 20px"></i>
+        </div>
+      </div>
+      <div class="searchContainer">
+        <div class="search">
+          <i
+            class="fa-solid fa-magnifying-glass glassIcon"
+            style="font-size: 25px"></i>
+        </div>
+
+        <div class="logInHeader">
+          <a href="/">Log in</a>
+        </div>
+        <a href="/" id="createAccountHeader">Create account</a>
+      </div>
+    </header>
+    <main>
+      <aside class="asideLeft">
+        <div class="logInBox">
+          <h2 class="titleLogIn">
+            DEV Community is a community of 1,192,404 amazing developers
+          </h2>
+          <p>
+            We&#39;re a place where coders share, stay up-to-date and grow their
+            careers.
+          </p>
+          <div class="logInButtons">
+            <a href="/" id="createAccountBtn">Create account</a>
+            <a href="/" id="logInAside">Log In</a>
+          </div>
+        </div>
+        <nav class="asideNav">
+          <ul>
+            <li>
+              <a href="/"><i class="fa-solid fa-house"></i>Home</a>
+            </li>
+            <li>
+              <a href="/"><i class="fa-solid fa-microphone"></i>Podcasts</a>
+            </li>
+            <li>
+              <a href="/"><i class="fa-solid fa-video"></i>Video</a>
+            </li>
+            <li>
+              <a href="/"><i class="fa-solid fa-tag"></i>Tags</a>
+            </li>
+            <li>
+              <a href="/"><i class="fa-regular fa-lightbulb"></i>FAQ</a>
+            </li>
+            <li>
+              <a href="/"><i class="fa-solid fa-bag-shopping"></i>Forem Shop</a>
+            </li>
+            <li>
+              <a href="/"><i class="fa-brands fa-dev"></i>About</a>
+            </li>
+            <li>
+              <a href="/"><i class="fa-solid fa-circle-notch"></i>Contact</a>
+            </li>
+            <li>
+              <a href="/"><i class="fa-solid fa-book-open"></i>Guides</a>
+            </li>
+            <li>
+              <a href="/"
+                ><i class="fa-regular fa-face-grimace"></i>Software
+                comparisons</a
+              >
+            </li>
+          </ul>
+          <div class="other">
+            <h2>Other</h2>
+            <ul>
+              <li>
+                <a href="/"
+                  ><i class="fa-regular fa-thumbs-up"></i>Code of Conduct</a
+                >
+              </li>
+              <li>
+                <a href="/"
+                  ><i class="fa-regular fa-face-laugh"></i>Privacy Policy</a
+                >
+              </li>
+              <li>
+                <a href="/"><i class="fa-regular fa-eye"></i>Terms of Use</a>
+              </li>
+            </ul>
+          </div>
+          <div class="asideIcons">
+            <i class="fa-brands fa-twitter"></i>
+
+            <a href="/"><i class="fa-brands fa-facebook"></i></a>
+
+            <a href="/"><i class="fa-brands fa-github"></i></a>
+
+            <a href="/"><i class="fa-brands fa-instagram"></i></a>
+
+            <a href="/"> <i class="fa-brands fa-twitch"></i></a>
+
+            <a href="/"><i class="fa-brands fa-mastodon"></i></a>
+          </div>
+          <br />
+        </nav>
+      </aside>
+    </main>
   </body>
+  <script
+    src="https://kit.fontawesome.com/acd114ba49.js"
+    crossorigin="anonymous"></script>
 </html>
