--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="hamburgerContainer">
+      <section class="hamburgerContainer">
         <div class="hamburger">
           <i class="fa-solid fa-bars" style="font-size: 25px"></i>
         </div>
@@ -19,8 +19,8 @@
             class="fa-solid fa-magnifying-glass inputGlass"
             style="font-size: 20px"></i>
         </div>
-      </div>
-      <div class="searchContainer">
+      </section>
+      <section class="searchContainer">
         <div class="search">
           <i
             class="fa-solid fa-magnifying-glass glassIcon"
@@ -31,11 +31,11 @@
           <a href="/">Log in</a>
         </div>
         <a href="/" id="createAccountHeader">Create account</a>
-      </div>
+      </section>
     </header>
     <main>
       <aside class="asideLeft">
-        <div class="logInBox">
+        <section class="logInBox">
           <h2 class="titleLogIn">
             DEV Community is a community of 1,192,404 amazing developers
           </h2>
@@ -47,7 +47,7 @@
             <a href="/" id="createAccountBtn">Create account</a>
             <a href="/" id="logInAside">Log In</a>
           </div>
-        </div>
+        </section>
         <nav class="asideNav">
           <ul>
             <li>
@@ -84,7 +84,7 @@
               >
             </li>
           </ul>
-          <div class="other">
+          <section class="other">
             <h2>Other</h2>
             <ul>
               <li>
@@ -101,8 +101,8 @@
                 <a href="/"><i class="fa-regular fa-eye"></i>Terms of Use</a>
               </li>
             </ul>
-          </div>
-          <div class="asideIcons">
+          </section>
+          <section class="asideIcons">
             <i class="fa-brands fa-twitter"></i>
 
             <a href="/"><i class="fa-brands fa-facebook"></i></a>
@@ -114,7 +114,7 @@
             <a href="/"> <i class="fa-brands fa-twitch"></i></a>
 
             <a href="/"><i class="fa-brands fa-mastodon"></i></a>
-          </div>
+          </section>
           <br />
         </nav>
       </aside>
