--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="postTop">
             <div class="postMeta">
               <a href="https://dev.to/barrymichaeldoyle" class="postAvatar  postAvatar--l">
-                <img src="./images/162edfc7-780a-4d8b-87ba-ddd14206256c.webp" alt="barrymichaeldoyle profile" class="postAvatarImage" loading="lazy">
+                <img src="./assets/162edfc7-780a-4d8b-87ba-ddd14206256c.webp" alt="barrymichaeldoyle profile" class="postAvatarImage" loading="lazy">
               </a>
             </div>
             <div>
@@ -88,7 +88,7 @@
             <div class="postIndention">
               <h2 class="postTitle">
                 <a href="https://dev.to/barrymichaeldoyle/stop-using-chatgpt-to-write-your-blog-posts-for-you-its-not-working-139g" id="articleLink">
-                  Stop Using ChatGPT To Write Your Blog Posts For You! It's Not Working
+                  Stop Using ChatGPT To Write Your Blog Posts For You! It's Not Working...
                 </a>
               </h2>
               <div class="postTags">
@@ -126,15 +126,13 @@
                   </div>
                   <div class="postSave">
                     <small class="text"> 4 min read</small>
-                    
-
+                    <span class="save">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 48C0 21.5 21.5 0 48 0l0 48V441.4l130.1-92.9c8.3-6 19.6-6 27.9 0L336 441.4V48H48V0H336c26.5 0 48 21.5 48 48V488c0 9-5 17.2-13 21.3s-17.6 3.4-24.9-1.8L192 397.5 37.9 507.5c-7.3 5.2-16.9 5.9-24.9 1.8S0 497 0 488V48z"/></svg>
+                    </span>
                   </div>
                 </div>
               </div>
-
           </div>
-
-            
           </div>
         </div>
       </div>
