--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         <div class="inputContainer">
           <input type="text" placeholder="Search..." class="inputNav" /><i
             class="fa-solid fa-magnifying-glass inputGlass"
-            style="font-size: 20px"></i>
+            style="font-size: 20px"
+          ></i>
         </div>
       </section>
       <section class="searchContainer">
         <div class="search">
           <i
             class="fa-solid fa-magnifying-glass glassIcon"
-            style="font-size: 25px"></i>
+            style="font-size: 25px"
+          ></i>
         </div>
 
         <div class="logInHeader">
@@ -120,82 +122,75 @@
         </nav>
       </aside>
 
-      <section>
+      <section class="juniorCard">
         <img
           src="/assets/red_horizon.jpg"
           class="fullWidth"
-          alt="red mountains at the horizon" />
+          alt="red mountains at the horizon"
+        />
         <div class="juniorDevSectionPadding">
           <aside>
             <div class="profileInfo">
               <img
                 src="/assets/rounded-profile.png"
                 class="profileImage"
-                alt="profile picture of a guy smiling" />
+                alt="profile picture of a guy smiling"
+              />
               <div class="column">
                 <h3 style="font-size: 16px">Mateusz Charytoniuk</h3>
                 <h4 class="profile-subtitle">Posted on Nov 15</h4>
               </div>
             </div>
-
-            <div class="emoji-section">
-              <div class="emoji">
-                <p>💖</p>
-                <p>120</p>
-              </div>
-
-              <div class="emoji">
-                <p>🦄</p>
-                <p>6</p>
-              </div>
-
-              <div class="emoji">
-                <p>🤩</p>
-                <p>9</p>
-              </div>
-
-              <div class="emoji">
-                <p>🙌</p>
-                <p>18</p>
-              </div>
-
-              <div class="emoji">
-                <p>🔥</p>
-                <p>21</p>
-              </div>
-            </div>
           </aside>
-          <article>
-            <h1 class="mainTitle">To Junior Developers</h1>
-            <aside class="tagSection">
-              <p class="tags">#programming</p>
-              <p class="tags">#beginners</p>
-              <p class="tags">#career</p>
-              <p class="tags">#productivity</p>
-            </aside>
-            <p>
-              I have 15 years of experience, coded in various languages, and
-              solved multiple problems. I started my career when being a
-              software developer was a hot commodity.
+          <h1 class="mainTitle">To Junior Developers</h1>
+          <aside class="tagSection">
+            <p class="tags">#programming</p>
+            <p class="tags">#beginners</p>
+            <p class="tags">#career</p>
+            <p class="tags">#productivity</p>
+          </aside>
+
+          <div class="emoji-section">
+            <div class="emoji">
+              <p>💖</p>
+              <p>120</p>
+            </div>
+            <div class="emoji">
+              <p>🦄</p>
+              <p>6</p>
+            </div>
+            <div class="emoji">
+              <p>🤩</p>
+              <p>9</p>
+            </div>
+            <div class="emoji">
+              <p>🙌</p>
+              <p>18</p>
+            </div>
+            <div class="emoji">
+              <p>🔥</p>
+              <p>20</p>
+            </div>
+          </div>
+
+          <div class="commentSection">
+            <p>💬 97</p>
+            <p class="bookmarkSection">
+              4 min read
+              <img
+                src="assets/bookmark.png"
+                alt="bookmark icon"
+                width="15px"
+                height="15px"
+              />
             </p>
-            <p>
-              Looking at what is happening around us, I have to say a few
-              things, and I will stay realistic. Things may sound harsh, but
-              it's better than divulging in some copium.
-            </p>
-            <h1 class="mainTitle">Be Independent</h1>
-            <p>
-              If you land a coding job, be independent. Ask only a few questions
-              about how to do things in the tech stack. People may tell you at
-              first that there are no wrong questions, but in practice, there
-              are. You should figure out most things by yourself.
-            </p>
-          </article>
+          </div>
         </div>
       </section>
     </main>
   </body>
   <script
     src="https://kit.fontawesome.com/acd114ba49.js"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"
+  ></script>
 </html>
