fix(mobile): second fix to card lol im bad

--- a/index.html
+++ b/index.html
@@ -151,31 +151,16 @@
           </aside>
 
           <div class="emoji-section">
-            <div class="emoji">
+            <div class="setOfEmojis">
               <p>💖</p>
-              <p>120</p>
-            </div>
-            <div class="emoji">
               <p>🦄</p>
-              <p>6</p>
-            </div>
-            <div class="emoji">
               <p>🤩</p>
-              <p>9</p>
-            </div>
-            <div class="emoji">
               <p>🙌</p>
-              <p>18</p>
-            </div>
-            <div class="emoji">
               <p>🔥</p>
-              <p>20</p>
+              <p class="emojiText"">286</p>
+              <p class="emojiText" style="margin-left: 10px">💬 97</p>
             </div>
-          </div>
-
-          <div class="commentSection">
-            <p>💬 97</p>
-            <p class="bookmarkSection">
+            <div class="bookmarkSection">
               4 min read
               <img
                 src="assets/bookmark.png"
@@ -183,7 +168,7 @@
                 width="15px"
                 height="15px"
               />
-            </p>
+            </div>
           </div>
         </div>
       </section>
