feat((tablet-junior):  tablet version finished

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 alt="profile picture of a guy smiling"
               />
               <div class="column">
-                <h3 style="font-size: 16px">Mateusz Charytoniuk</h3>
+                <h3 style="font-size: 16px; color: rgb(64, 64, 64)">Mateusz Charytoniuk</h3>
                 <h4 class="profile-subtitle">Posted on Nov 15</h4>
               </div>
             </div>
@@ -158,7 +158,9 @@
               <p>🙌</p>
               <p>🔥</p>
               <p class="emojiText"">286</p>
+              <p class="emojiText showOnTabletOnly" style="margin-left: 5px">reactions</p>
               <p class="emojiText" style="margin-left: 10px">💬 97</p>
+              <p class="emojiText showOnTabletOnly" style="margin-left: 10px;">comments</p>
             </div>
             <div class="bookmarkSection">
               4 min read
