--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
                 <h3> #discuss</h3>
               </header>
               <div>
-                <a href="https://dev.to/scofieldidehen/sam-altman-corporate-collateral-damage-52oc">
+                <button><a href="https://dev.to/scofieldidehen/sam-altman-corporate-collateral-damage-52oc">
                   Sam Altman: Corporate Collateral Damage?
                   <div class="comments"> 2 comments </div>
-                </a>
+                </a></button>
                 <a href="https://dev.to/mainarthur/remote-vs-hybrid-vs-office-3k78">
                   Remote vs Hybrid vs Office
                   <div class="comments"> 4 comments</div>
@@ -221,7 +221,7 @@
               <header class="rightHeader">
                 <h3> #watercooler</h3>
               </header>
-              <div>
+              <div class="box">
                 <a href="https://dev.to/mainarthur/remote-vs-hybrid-vs-office-3k78">
                   Remote vs Hybrid vs Office"
                   <div class="comments"> 4 comments</div>
