--- a/index.html
+++ b/index.html
@@ -185,20 +185,62 @@
 
 
 
+<!-- sección de vero -->
 
+    <div class="sideCard">
+      <p class="cardTitle">#discuss</p>
+      <div class="linkAndCommentSection">
+        <a href="#" class="sideCardLink">
+          <p>How to Overcome Fear in Pursuing Goals?</p>
+        </a>
+        <p class="sideCardComment">7 comments</p>
+      </div>
+
+      <div class="linkAndCommentSection">
+        <a href="#" class="sideCardLink">
+          <p>I like potato 🥔</p>
+        </a>
+        <p class="sideCardComment">7 comments</p>
+      </div>
+
+      <div class="linkAndCommentSection">
+        <a href="#" class="sideCardLink">
+          <p>Potatoes are really nice 🍠</p>
+        </a>
+        <p class="sideCardComment">7 comments</p>
+      </div>
+
+      <div class="linkAndCommentSection">
+        <a href="#" class="sideCardLink">
+          <p>ELOTE!!!! 🌽</p>
+        </a>
+        <p class="sideCardComment">7 comments</p>
+      </div>
+
+      <div class="linkAndCommentSection">
+        <a href="#" class="sideCardLink">
+          <p>Kinda wanna go watch a movie rn tbh 🍿</p>
+        </a>
+        <p class="sideCardComment">7 comments</p>
+      </div>
+
+     
+
+      
+    </div>
 
       <section id="sidebarRight">
         <div class="rightSidebar">
           <aside class="rightAdiotional">
-            <section class="card">
+            <!-- <section class="card">
               <header class="rightHeader">
                 <h3> #discuss</h3>
               </header>
               <div>
-                <button><a href="https://dev.to/scofieldidehen/sam-altman-corporate-collateral-damage-52oc">
+                  <a class="" href="https://dev.to/scofieldidehen/sam-altman-corporate-collateral-damage-52oc">
                   Sam Altman: Corporate Collateral Damage?
                   <div class="comments"> 2 comments </div>
-                </a></button>
+                </a>
                 <a href="https://dev.to/mainarthur/remote-vs-hybrid-vs-office-3k78">
                   Remote vs Hybrid vs Office
                   <div class="comments"> 4 comments</div>
@@ -216,7 +258,9 @@
                   <div class="comments"> 3 comments</div>
                 </a>                
               </div>
-            </section>
+            </section> -->
+
+
             <section class="card">
               <header class="rightHeader">
                 <h3> #watercooler</h3>
