--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/to-junior-dev.css" />
+        <link rel="stylesheet" href="./css/sideCard.css" />
+
         <title>DEV Community</title>
     </head>
     <body>
@@ -223,6 +225,115 @@
                                 />
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- vero section -->
+            <section class="sideCardContainer">
+                <div class="sideCard">
+                    <p class="cardTitle">#discuss</p>
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/scofieldidehen/sam-altman-corporate-collateral-damage-52oc"
+                            class="sideCardLink"
+                        >
+                            <p>Sam Altman: Corporate Collateral Damage?</p>
+                            <p class="sideCardComment">2 comments</p>
+                        </a>
+                    </div>
+
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/mainarthur/remote-vs-hybrid-vs-office-3k78"
+                            class="sideCardLink"
+                        >
+                            <p>Remote vs Hybrid vs Office</p>
+                            <p class="sideCardComment">4 comments</p>
+                        </a>
+                    </div>
+
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/mukeshkuiry/what-is-distributed-systems-1ig3"
+                            class="sideCardLink"
+                        >
+                            <p>What is Distributed systems?</p>
+                            <p class="sideCardComment">2 comments</p>
+                        </a>
+                    </div>
+
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/devteam/caption-this-2iij"
+                            class="sideCardLink"
+                        >
+                            <p>Caption This! 🤔💭</p>
+                            <p class="sideCardComment">5 comments</p>
+                        </a>
+                    </div>
+
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/satoshi-sh/luck-doing-things-x-telling-people-17kl"
+                            class="sideCardLink"
+                        >
+                            <p>Luck = [Doing Things] x [Telling People]</p>
+                            <p class="sideCardComment">3 comments</p>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="sideCard">
+                    <p class="cardTitle">#discuss</p>
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/scofieldidehen/sam-altman-corporate-collateral-damage-52oc"
+                            class="sideCardLink"
+                        >
+                            <p>Sam Altman: Corporate Collateral Damage?</p>
+                            <p class="sideCardComment">2 comments</p>
+                        </a>
+                    </div>
+
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/mainarthur/remote-vs-hybrid-vs-office-3k78"
+                            class="sideCardLink"
+                        >
+                            <p>Remote vs Hybrid vs Office</p>
+                            <p class="sideCardComment">4 comments</p>
+                        </a>
+                    </div>
+
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/mukeshkuiry/what-is-distributed-systems-1ig3"
+                            class="sideCardLink"
+                        >
+                            <p>What is Distributed systems?</p>
+                            <p class="sideCardComment">2 comments</p>
+                        </a>
+                    </div>
+
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/devteam/caption-this-2iij"
+                            class="sideCardLink"
+                        >
+                            <p>Caption This! 🤔💭</p>
+                            <p class="sideCardComment">5 comments</p>
+                        </a>
+                    </div>
+
+                    <div class="linkAndCommentSection">
+                        <a
+                            href="https://dev.to/satoshi-sh/luck-doing-things-x-telling-people-17kl"
+                            class="sideCardLink"
+                        >
+                            <p>Luck = [Doing Things] x [Telling People]</p>
+                            <p class="sideCardComment">3 comments</p>
+                        </a>
                     </div>
                 </div>
             </section>
