--- a/index.html
+++ b/index.html
@@ -154,13 +154,11 @@
             </aside>
 
             <section class="juniorCard">
-                
-                <div class="juniorDevSectionPadding">
-                  <img
-                    src="/assets/red_horizon.jpg"
-                    class="fullWidth"
-                    alt="red mountains at the horizon"
-                />  
+              <img
+              src="/assets/red_horizon.jpg"
+              class="fullWidth"
+              alt="red mountains at the horizon"/>
+                <div class="juniorDevSectionPadding">  
                   <aside>
                         <div class="profileInfo">
                             <img
@@ -436,6 +434,77 @@
                   </div>
               </div>
           </div>
+
+          <div class="juniorDevSectionPadding">
+            <aside>
+                <div class="profileInfo">
+                    <img
+                        src="/assets/f0514090-260b-4a34-89b0-a2b6e922d5ec.webp"
+                        class="profileImage"
+                        alt="profile picture of a guy smiling"
+                    />
+                    <div class="column">
+                        <h3
+                            style="
+                                font-size: 16px;
+                                color: rgb(64, 64, 64);
+                            "
+                        >
+                            GrahamTheDev
+                        </h3>
+                        <h4 class="profile-subtitle">
+                            Nov 20
+                        </h4>
+                    </div>
+                </div>
+            </aside>
+            <div class="paddingOnDesktop">
+                <h1 class="mainTitle">Bootcamps don't teach you this...</h1>
+                <aside class="tagSection">
+                    <p class="tags">#a11y</p>
+                    <p class="tags">#webdev</p>
+                    <p class="tags">#programming</p>
+                    <p class="tags">#beginners</p>
+                </aside>
+
+                <div class="emoji-section">
+                    <div class="setOfEmojis">
+                        <p>💖</p>
+                        <p>🦄</p>
+                        <p>🤩</p>
+                        <p>🙌</p>
+                        <p>🔥</p>
+                        <div class="comm">
+                        <p class="emojiText">7</p>
+                        <p
+                            class="emojiText showOnTabletOnly"
+                            style="margin-left: 5px"
+                        >
+                            reactions
+                        </p>
+                        </div>
+                        <p class="emojiText" style="margin-left: 10px">
+                            💬 
+                        </p>
+                        <p
+                            class="emojiText showOnTabletOnly"
+                            style="margin-left: 10px"
+                        >
+                            
+                        </p>
+                    </div>
+                    <div class="bookmarkSection">
+                        5 min read
+                        <img
+                            src="assets/bookmark.png"
+                            alt="bookmark icon"
+                            width="15px"
+                            height="15px"
+                        />
+                    </div>
+                </div>
+            </div>
+        </div>          
 
           </section>
 
