adding top seccion on the middle colummn

--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
                 </aside>
 
                 <section class="juniorCard">
+                    <div class="middleNav">
+                        <a href="/">Relevant </a>
+                        <a href="/">Latest </a>
+                        <a href="/">Top </a>
+                    </div>
                     <img
                         src="/assets/red_horizon.jpg"
                         class="fullWidth"
