--- a/index.html
+++ b/index.html
@@ -166,11 +166,128 @@
                         </section>
                         <br />
                     </nav>
+                    <section class="popularTags">
+                        <div class="popular">
+                            <h2 class="titleLogIn">Popular Tags</h2>
+                            <ul>
+                                #webdev
+                            </ul>
+                            <ul>
+                                #javascript
+                            </ul>
+                            <ul>
+                                #programming
+                            </ul>
+                            <ul>
+                                #beginners
+                            </ul>
+                            <ul>
+                                #tutorial
+                            </ul>
+                            <ul>
+                                #react
+                            </ul>
+                            <ul>
+                                #python
+                            </ul>
+                            <ul>
+                                #discuss
+                            </ul>
+                            <ul>
+                                #productivity
+                            </ul>
+                            <ul>
+                                #devops
+                            </ul>
+                            <ul>
+                                #aws
+                            </ul>
+                            <ul>
+                                #career
+                            </ul>
+                            <ul>
+                                #opensource
+                            </ul>
+                            <ul>
+                                #css
+                            </ul>
+                            <ul>
+                                #news
+                            </ul>
+                            <ul>
+                                #ai
+                            </ul>
+                            <ul>
+                                #node
+                            </ul>
+                            <ul>
+                                #html
+                            </ul>
+                            <ul>
+                                #typescript
+                            </ul>
+                            <ul>
+                                #codenewbie
+                            </ul>
+                            <ul>
+                                #cloud
+                            </ul>
+                            <ul>
+                                #testing
+                            </ul>
+                            <ul>
+                                #java
+                            </ul>
+                            <ul>
+                                #learning
+                            </ul>
+                            <ul>
+                                #api
+                            </ul>
+                            <ul>
+                                #database
+                            </ul>
+                            <ul>
+                                #github
+                            </ul>
+                            <ul>
+                                #security
+                            </ul>
+                            <ul>
+                                #php
+                            </ul>
+                            <ul>
+                                #android
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section class="box1">
+                        <div class="dots">
+                            <p>DEV Community ...</p>
+                        </div>
+
+                        <h2 class="titleLogIn">
+                            Discover the Benefits of DEV Organization Accounts!
+                        </h2>
+                        <p>
+                            Explore the world of DEV Organization Accounts and
+                            unlock valuable features to boost your online
+                            presence. Showcase your brand with organization
+                            branding, engage with your audience, and gain
+                            insights with advanced analytics.
+                        </p>
+                        <div class="logInButtons">
+                            <a href="/" id="createAccountBtn">
+                                Get started today!</a
+                            >
+                        </div>
+                    </section>
                 </aside>
 
                 <section class="juniorCard">
                     <div class="middleNav">
-                        <a href="/">Relevant </a>
+                        <a href="/"><strong>Relevant</strong></a>
                         <a href="/">Latest </a>
                         <a href="/">Top </a>
                     </div>
