feat(sideCard): visual improvements

--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
                                 href="https://dev.to/devteam/caption-this-2iij"
                                 class="sideCardLink"
                             >
-                                <p>Caption This! 🤔💭</p>
+                                <p>How AI Could Start a Revolution 🧠🤖</p>
                                 <p class="sideCardComment">5 comments</p>
                             </a>
                         </div>
@@ -806,7 +806,7 @@
                                 href="https://dev.to/mainarthur/remote-vs-hybrid-vs-office-3k78"
                                 class="sideCardLink"
                             >
-                                <p>Remote vs Hybrid vs Office"</p>
+                                <p>Remote vs Hybrid vs Office 🤔</p>
                                 <p class="sideCardComment">4 comments</p>
                             </a>
                         </div>
@@ -816,7 +816,7 @@
                                 href="https://dev.to/devteam/caption-this-2iij"
                                 class="sideCardLink"
                             >
-                                <p>Caption This! 🤔💭</p>
+                                <p>Meme Monday 😆</p>
                                 <p class="sideCardComment">5 comments</p>
                             </a>
                         </div>
